@@ -1,3 +1,9 @@
+2015-09-18  John David Anglin  <danglin@gcc.gnu.org>
+
+	PR middle-end/67401
+	* optabs.c (expand_atomic_compare_and_swap): Move result of emitting
+	sync_compare_and_swap_optab libcall to target_oval.
+
 2015-09-17  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR rtl-optimization/66790
